# linux-application-development

./: README.md
01_BuildReq/: Makefile  main.c
02_TerminalProject/: Makefile  Show.c
03_Multifile/: .Makefile.swp  Makefile  fun.c  prog.c
04_Text/: randomize.sh
05_Debugging/: Makefile  gdb-script1.txt  gdb-script2.txt  range.c
06_TracingFencing/: Makefile  move.c  remove.c  run_ld_preload_test.sh  run_test.sh  tests.sh
07_Environmental/: Makefile.am  configure.ac  rhasher.c
08_Regexps/: Makefile.am  configure.ac  esub.c  run.sh
09_Testing/: Makefile.am  configure.ac  run.sh
09_Testing/src/: Makefile.am  libbuf.c  libbuf.h
09_Testing/tests/: Makefile.am  libbuf_tests.ts
10_I18n/: Makefile.am  configure.ac  guesser.c  guesser.pot  ru.po  run.sh
11_Documenting/: Doc.md  Doxyfile.in  Makefile.am  configure.ac  guesser.c  guesser.pot  ru.po
